# data_science

./: 1_practice.ipynb  2_2_Template_Estimation_of_the_Average_Customer_Check.ipynb  3_1_Template_Credit_Scoring.ipynb  AE_conv2d_(2).ipynb  Analysis_of_AB_Test_Result.ipynb  Brazil_houses_rental_Дослідення.ipynb  CTR_Analysis_Template.ipynb  CV().ipynb  Confidence_Interval_for_the_Mean.ipynb  Credit_Scoring_Model_Evaluation.ipynb  Credit_Scoring_with_Categorical_Variables.ipynb  Data_Sorting.ipynb  Data_Visualization_with_Matplotlib.ipynb  Data_Visualization_with_Seaborn.ipynb  Decision_tree_stop_criteria.ipynb  Descriptive_Analytics_with_Pandas.ipynb  EDA_Matplotlib_и_Seaborn.ipynb  Elbow_method.ipynb  English_Level.ipynb  Estimation_of_the_Average_Customer_Check_Part_2.ipynb  Food_Demand_Forecasting_Supervised_ML.ipynb  Getting_Started_with_Seaborn.ipynb  HW_6.ipynb  Hw1.ipynb  Hw1_corr1.ipynb  Hw2_2.ipynb  Hw5_11_04.ipynb  Insurance.ipynb  KMeans++.ipynb  KMeans.ipynb  Keras_Text_classification_with_TensorFlow_Hub_movie_reviews_transfer_learning.ipynb  Keras__Basic_classification_Classify_clothing_images.ipynb  Linear_regression_step_by_step_example.ipynb  Loyalty_program_evaluation.ipynb  Matplotlib_Bar_Chart.ipynb  Matplotlib_Customizing_Plots.ipynb  Matplotlib_Customizing_Plots2.ipynb  Matplotlib_Histogram.ipynb  Matplotlib_Line_Plot.ipynb  Matplotlib_Scatter_Plot.ipynb  (+45 more)
12/: module 12.1.ipynb  module 12.2.ipynb
13/: module 13.1.ipynb  yolo8.ipynb
4_practice/: lesson_2.ipynb  use_case.ipynb  use_case_4_2.ipynb
5_pandas/: Pandas.ipynb  (+1 more)
6/: linear_models_2.ipynb  (+3 more)
(+62 files in other folders)
