[tool.poetry]
name = "m"
version = "0.1.0"
description = ""
authors = ["MariiaSam <kontragent@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
notebook = "^7.2.2"
seaborn = "^0.13.2"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
